# sdk-core-base

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.sh  build_clib.sh  build_cpp.sh  build_go.sh  build_java.sh  build_lua.sh  build_nodejs_local.sh  build_python.sh  version.sh
.cargo/: config.toml
.github/scripts/: check_version_by.sh  version_check.sh
.github/workflows/: build_pub_cpp.yaml  build_pub_golang.yaml  build_pub_java.yaml  build_pub_lua.yaml  build_pub_nodejs.yaml  build_pub_python.yaml  build_test_java.yaml  build_test_nodejs.yaml  pr.yaml
android/src/: lib.rs
clib/: Cargo.toml  build.rs  dt_core_clib.h
clib/src/: lib.rs
common/: Cargo.toml
common/src/: base.rs  consumer.rs  event.rs  lib.rs  upload.rs  util.rs
common/src/consumer/: async_upload.rs  database_cache.rs  log.rs  mmap_log.rs
common/src/event/: common_properties.rs  data_verification.rs  processing.rs
common/src/upload/: http_service.rs
common/src/util/: benchmark_tracer.rs  data_struct.rs  data_verification.rs  datetime.rs  error.rs  logger.rs  result.rs  single_process_lock.rs  system_util.rs  worker.rs
common/src/util/data_struct/: ordered_linked_list.rs
common/src/util/worker/: message_queue.rs  worker.rs
cpp/: Makefile  dt_analytics.cpp  dt_analytics.h  log_consumer.cpp  log_consumer.h
cpp/demo/: main.cpp
cpp/include/: dt_core_clib.h
csharp/DTCore/: DTCore.sln
csharp/DTCore/DTCore/: DTAnalytics.cs  DTCore.csproj  LogConsumer.cs  MmapLogConsumer.cs
csharp/DTCore/DTCore/Base/: Consumer.cs
csharp/DTCore/DTCore/Native/: DtCoreNative.cs  DtCoreNative.g.cs
csharp/DTCore/TestApp/: Program.cs  TestApp.csproj
dev/: Benchmark.lua  benchmark.py  test.py
go/dt_core_golang/: LICENSE  dt_analytics.go  go.mod  log_consumer.go  mmap_log_consumer.go
go/dt_core_golang/demo/: main.go
go/dt_core_golang/include/: dt_core_clib.h
go/dt_core_golang/src/dt_analytics/: dt_sdk.go  log_consumer.go
go/dt_sdk_golang/: dt_sdk_test.go  go.mod  libdt_core_go.dylib
go/dt_sdk_golang/demo/: main.go
go/dt_sdk_golang/src/dt_analytics/: dt_sdk.go  libdt_core_clib.dylib
go/sdk_core_golang/demo/: main.go
go/sdk_core_golang/src/: dt_core_clib.h  dt_sdk.go  log_consumer.go
java/: Cargo.toml
java/java/: DTAnalytics.java  DTBase.java  build.gradle  gradlew  settings.gradle
java/java/demo/: build.gradle
java/java/demo/src/main/kotlin/: Main.kt
java/java/lib/: build.gradle
java/java/lib/src/main/java/ai/datatower/sdk/: Consumer.java  DTAnalytics.java  DTBase.java  DTLogConsumer.java  DTMmapLogConsumer.java
java/java/lib/src/main/resources/ai/datatower/sdk/: libdt_core_java-macos-amd64.dylib
java/java/lib/src/test/java/ai/datatower/sdk/: DTTest.java  LibraryTest.java
java/java/test/: build.gradle
java/java/test/src/main/java/org/example/: Main.kt
java/java/test/src/main/kotlin/ai/datatower/sdk/demo/: HttpTest.kt
java/src/: lib.rs
lua/: Cargo.toml  gen_rockspec.sh
lua/dt-lua-sdk/: .gitignore  DataTowerSdk.lua  README.md
lua/lua/: .gitignore  DataTowerSdk.lua  README.md  gen_rockspec.sh
lua/src/: lib.rs
nodejs/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json
nodejs/.github/workflows/: CI.yml
nodejs/__test__/: index.spec.mjs
nodejs/dll/: index.d.ts  index.js
nodejs/npm/darwin-arm64/: README.md  package.json
nodejs/npm/darwin-x64/: README.md  package.json
nodejs/npm/linux-arm64-gnu/: README.md  package.json
nodejs/npm/linux-x64-gnu/: README.md  package.json
nodejs/npm/win32-arm64-msvc/: README.md  package.json
nodejs/npm/win32-x64-msvc/: README.md  package.json
nodejs/src/: lib.rs
python/: Cargo.toml  pyproject.toml
python/python/dt_core_python/: datatowerai_sdk.py
python/python/dt_python_sdk/: __init__.py  datatowerai_sdk.py
python/src/: lib.rs
rs-test/: Cargo.toml
rs-test/src/: main.rs
test/go/: go.mod  go.sum  main.go
test/lua/: HttpTest.lua
test/nodejs/: index.js  package-local.json  package-lock.json  package.json
test/python/: http_test.py
