[package]
name = "clib"
version = "1.0.0-alpha1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dt_core_clib"
crate-type = ["cdylib"]

[features]
benchmark = ["common/benchmark"]

[dependencies]
common = { path = "../common", default-features = false, features = ["log-consumer-server"] }
serde_json = { workspace = true }

[build-dependencies]
cbindgen = "0.26.0"
