[package]
name = "common"
version = "1.0.2"
edition = "2021"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["log-consumer-server" ]
log-consumer-server = ["cat_server"]    # Stable!
db-cache-consumer-client = ["thread", "database", "network", "cat_client"]  # WIP!
async-upload-server = ["thread", "network", "cat_server"]   # WIP!
# sub-features, PLEASE USE FEATURES ABOVE
thread = []                     # with modules of thread
database = ["rusqlite"]         # with database cache
network = ["reqwest"]           # with networking (upload)
cat_client = []                 # Category: Client SDK, c2s
cat_server = []                 # Category: Server SDK, s2s

[build-dependencies]
cfg-if = "1.0.0"

[dependencies]
serde_json = { workspace = true }
regex = "1.10.3"
once_cell = "1.19.0"
log = "0.4.21"
uuid = { version = "1.8.0", features = ["v4"] }
rusqlite = { version = "0.31.0", features = ["bundled", "serde_json"], optional = true }
reqwest = { version = "0.12.1", features = ["blocking", "json"], optional = true }
