[package]
name = "android"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dt_core_android"
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common", default-features = false, features = ["db-cache-consumer"] }
serde_json = { workspace = true }
jni = { version = "0.21.1", default-features = false }
