[package]
name = "java"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dt_core_java"
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common", default-features = false, features = ["log-consumer-server"] }
serde_json = { workspace = true }
jni = "0.21.1"
