[package]
name = "java"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dt_core_java"
crate-type = ["cdylib"]

[features]
benchmark = ["common/benchmark"]

[dependencies]
common = { path = "../common", default-features = false, features = ["log-consumer-server"] }
serde_json = { workspace = true }
jni = "0.21.1"
