#
# Build on macOS for lua 5.4 lib (see features section below for different options):
# $ cargo rustc --release --package lua --features lua54 -- -C link-arg=-undefined -C link-arg=dynamic_lookup
#
# Build on macOS for lua 5.4 and x86_64-linux-gnu:
# $ cargo rustc --release --package lua --features lua54 --target x86_64-unknown-linux-gnu
#
[package]
name = "lua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dt_core_lua"
crate-type = ["cdylib"]

[features]
default = ["lua54"]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]
luau = ["mlua/luau"]

[dependencies]
common = { path = "../common", default-features = false, features = ["log-consumer-server"] }
serde_json = { workspace = true }
mlua = { version = "0.9.6", features = ["module"] }
