[package]
edition = "2021"
name = "sdk_core_nodejs"
version = "1.0.0-alpha4"

[lib]
name = "sdk_core_nodejs"
crate-type = ["cdylib"]

[features]
benchmark = ["common/benchmark"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2.12.2"
common = { path = "../common", default-features = false, features = ["log-consumer-server"] }
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2.0.1"
