[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "dt_core_python"
requires-python = ">=3.7"
authors = [{name = "DataTower.ai"}]
description = "DataTower.ai Core SDK for Python"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://datatower.ai/"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "dt_core_python.dt_core_base_py"
